--- a/p63_infiltration-run.html
+++ b/p63_infiltration-run.html
@@ -24,6 +24,7 @@
       --text-muted: #737373;
 
       --accent-gold: #d4af37;
+      --gold-rgb: 212,175,55;
       --accent-gold-dim: #8a6f1f;
       --accent-red: #a83232;
       --accent-green: #5e8c61;
@@ -94,34 +95,6 @@
 
     #game-container { width: 100%; max-width: 760px; }
 
-    /* ── RUN LENGTH SELECTOR ─────────────────── */
-    .length-bar {
-      display: flex;
-      margin-bottom: 14px;
-      border: 1px solid rgba(212,175,55,0.25);
-      border-radius: 12px;
-      overflow: hidden;
-      background: rgba(255,255,255,0.02);
-    }
-    .length-opt {
-      flex: 1;
-      padding: 9px 8px 8px;
-      cursor: pointer;
-      background: transparent;
-      border: none;
-      border-right: 1px solid rgba(212,175,55,0.14);
-      color: var(--text-muted);
-      font-family: var(--font-body);
-      font-size: 0.82em;
-      text-align: center;
-      transition: all 0.18s;
-      line-height: 1.35;
-    }
-    .length-opt:last-child { border-right: none; }
-    .length-opt:hover  { background: rgba(212,175,55,0.06); color: var(--text-secondary); }
-    .length-opt.active { background: rgba(212,175,55,0.10); color: var(--text-primary); }
-    .length-opt .lo-name   { font-family: var(--font-display); font-size: 1.05em; letter-spacing: 2px; display: block; text-transform: uppercase; }
-    .length-opt .lo-detail { font-size: 0.82em; opacity: 0.85; display: block; }
 
     /* ── STATS ─────────────────────────────── */
     .stats {
@@ -251,8 +224,10 @@
     .card.tool-locked { border-color: rgba(212,175,55,0.75); }
     .card.cover-spent { opacity: 0.80; border-color: rgba(94, 140, 97, 0.45); }
 
-    .card.red-suit   .cv, .card.red-suit   .cs { color: var(--card-red); }
-    .card.black-suit .cv, .card.black-suit .cs { color: var(--card-black); }
+    .card.red-suit   .cv, .card.red-suit   .cs,
+    .card.red-suit   .big-suit, .card.red-suit .big-val { color: var(--card-red); }
+    .card.black-suit .cv, .card.black-suit .cs,
+    .card.black-suit .big-suit, .card.black-suit .big-val { color: var(--card-black); }
 
     .corner { position: absolute; display: flex; flex-direction: column; align-items: center; line-height: 1; font-family: var(--font-mono); }
     .corner.tl { top: 8px; left: 10px; }
@@ -564,22 +539,6 @@
 
   <div id="game-container">
 
-    <!-- Run Length -->
-    <div class="length-bar">
-      <button class="length-opt" data-len="short" onclick="setLength('short')">
-        <span class="lo-name">Quick</span>
-        <span class="lo-detail">20 cards · ~5 nodes</span>
-      </button>
-      <button class="length-opt" data-len="medium" onclick="setLength('medium')">
-        <span class="lo-name">Standard</span>
-        <span class="lo-detail">32 cards · ~8 nodes</span>
-      </button>
-      <button class="length-opt active" data-len="full" onclick="setLength('full')">
-        <span class="lo-name">Full</span>
-        <span class="lo-detail">44 cards · ~11 nodes</span>
-      </button>
-    </div>
-
     <!-- Stats -->
     <div class="stats">
       <div class="meter-section">
@@ -601,8 +560,7 @@
     <!-- Buttons -->
     <div class="actions" style="margin-bottom:10px">
       <button class="btn btn-secondary" onclick="toggleRules()">Rules</button>
-      <button class="btn btn-primary" onclick="initGame()">⟲ New Run</button>
-    </div>
+          </div>
 
     <!-- Rules Panel -->
     <div class="rules-panel" id="rules-panel">
@@ -710,6 +668,49 @@
     return a;
   }
 
+  // ---------------- P63 Embed Bridge ----------------
+  const P63_EMBED = (window.parent && window.parent !== window);
+  const P63 = {
+    send(type, payload = {}) {
+      if (!P63_EMBED) return;
+      window.parent.postMessage({ __p63: 1, type, ...payload }, "*");
+    }
+  };
+
+  let rewardSetId = null;
+  let P63_ENDED = false;
+
+  function isRedSuit(sym){ return sym === '♥' || sym === '♦'; }
+
+  function toSuitSymbol(sym) {
+    const raw = (sym == null) ? '' : String(sym).trim();
+    if (!raw) return '♠';
+
+    const upper = raw.toUpperCase();
+    if (upper === 'S' || upper === 'SPADE' || upper === 'SPADES') return '♠';
+    if (upper === 'C' || upper === 'CLUB' || upper === 'CLUBS') return '♣';
+    if (upper === 'H' || upper === 'HEART' || upper === 'HEARTS') return '♥';
+    if (upper === 'D' || upper === 'DIAMOND' || upper === 'DIAMONDS') return '♦';
+
+    if (raw === '♠' || raw === '♣' || raw === '♥' || raw === '♦') return raw;
+    return '♠';
+  }
+
+  // Receive reward set from parent
+  window.addEventListener("message", (e) => {
+    const d = e.data;
+    if (!d || d.__p63 !== 1) return;
+
+    if (d.type === "P63_REWARD_SET" && d.kind === "INFILTRATION") {
+      rewardSetId = d.rewardSetId || null;
+      rewardChoices = Array.isArray(d.rewards) ? d.rewards : [];
+      renderRewardChoices(); // will render actual cards now
+    }
+  });
+
+  // Tell parent we're alive (optional but helpful)
+  P63.send("P63_MINIGAME_READY", { kind: "INFILTRATION" });
+
   // ================================================================
   //  DECK CONFIGS (mechanics unchanged; just reskinned terminology)
   // ================================================================
@@ -762,7 +763,7 @@
   let pendingDetection = null;
   let pendingDetectionIdx = null;
 
-  let selectedLength = 'full';
+  let selectedLength = 'medium';
 
     // Reward placeholders (victory screen)
   let endgameMode = null;          // 'win' | 'dead'
@@ -770,10 +771,8 @@
   let selectedRewardIdx = null;
 
   function buildPlaceholderRewards() {
-    // Placeholder pool. In the full game, these will map to real stamped/sleeved cards and modifiers.
-    const pool  = Array.from({ length: 24 }, (_, i) => i);
-    const picks = shuffle(pool).slice(0, 3);
-    return picks.map(id => ({ id }));
+    // Standalone fallback only: empty placeholders
+    return [{}, {}, {}];
   }
 
   function renderRewardChoices() {
@@ -783,17 +782,57 @@
 
     items.innerHTML = '';
     selectedRewardIdx = null;
+    actionBtn.disabled = true;
 
-    rewardChoices.forEach((r, idx) => {
+    const list = (rewardChoices && rewardChoices.length) ? rewardChoices : buildPlaceholderRewards();
+
+    list.forEach((r, idx) => {
       const d = document.createElement('div');
       d.className = 'reward-card';
-      d.title = 'Select reward';
-      d.onclick = () => selectReward(idx);
+      d.title = rewardChoices.length ? 'Select reward' : 'Loading reward…';
+
+      // Build a display from flexible fields:
+      // Expected from parent:
+      // { rank:'A', suit:'S', suitSym:'♠', stampShort:'+10', sleeveShort:'STEEL' } (fields can vary)
+      const suitSym = toSuitSymbol(r.suitSym || r.suit || '♠');
+      const rank    = r.rank || r.value || '—';
+      const red     = isRedSuit(suitSym);
+
+      const stamp = r.stampShort || r.stampLabel || r.stampId || 'STAMP';
+      const sleeve = r.sleeveShort || r.sleeveLabel || r.sleeveId || 'SLEEVE';
+
+      d.innerHTML = `
+        <div style="position:absolute; inset:12px; display:flex; flex-direction:column; justify-content:space-between;">
+          <div style="display:flex; justify-content:space-between; font-family:var(--font-mono); font-weight:800; font-size:14px; line-height:1; color:${red?'var(--card-red)':'#e8e8ea'};">
+            <div>${rank}${suitSym}</div>
+            <div style="transform:rotate(180deg)">${rank}${suitSym}</div>
+          </div>
+
+          <div style="text-align:center; font-family:var(--font-display); letter-spacing:2px; text-transform:uppercase; color:rgba(212,175,55,0.95); font-size:16px;">
+            ${rewardChoices.length ? 'REWARD' : 'LOADING'}
+          </div>
+
+          <div style="display:flex; gap:8px; justify-content:center; flex-wrap:wrap;">
+            <span style="font-family:var(--font-mono); font-size:12px; padding:6px 8px; border-radius:999px; border:1px solid rgba(148,163,184,0.22); background:rgba(0,0,0,0.22); color:rgba(255,255,255,0.85);">
+              ${rewardChoices.length ? stamp : '…'}
+            </span>
+            <span style="font-family:var(--font-mono); font-size:12px; padding:6px 8px; border-radius:999px; border:1px solid rgba(148,163,184,0.22); background:rgba(0,0,0,0.22); color:rgba(255,255,255,0.85);">
+              ${rewardChoices.length ? sleeve : '…'}
+            </span>
+          </div>
+        </div>
+      `;
+
+      if (rewardChoices.length){
+        d.onclick = () => selectReward(idx);
+      } else {
+        d.style.cursor = "default";
+      }
+
       items.appendChild(d);
     });
 
     lootBox.classList.remove('hidden');
-    actionBtn.disabled = true;
   }
 
   function selectReward(idx) {
@@ -804,27 +843,45 @@
   }
 
   function endgameAction() {
-    if (endgameMode === 'win') {
-      if (selectedRewardIdx === null) return;
-      // Placeholder: in the full game, we'd add rewardChoices[selectedRewardIdx] to the run.
-      initGame();
-    } else {
-      initGame();
+    if (P63_ENDED) return;
+
+    if (P63_EMBED){
+      if (endgameMode === 'win'){
+        if (selectedRewardIdx === null) return;
+        P63_ENDED = true;
+        P63.send("P63_MINIGAME_END", {
+          kind: "INFILTRATION",
+          outcome: "win",
+          rewardSetId,
+          chosenIdx: selectedRewardIdx
+        });
+        return;
+      }
+
+      // dead
+      P63_ENDED = true;
+      P63.send("P63_MINIGAME_END", {
+        kind: "INFILTRATION",
+        outcome: "dead"
+      });
+      return;
     }
+
+    // Standalone fallback
+    initGame();
   }
 
 
   // ================================================================
   //  SETUP
   // ================================================================
-  function setLength(len) {
-    selectedLength = len;
-    document.querySelectorAll('.length-opt').forEach(el =>
-      el.classList.toggle('active', el.dataset.len === len)
-    );
-  }
-
   function initGame() {
+    P63_ENDED = false;
+
+    if (P63_EMBED){
+      selectedLength = "medium"; // Standard only
+    }
+
     deck = shuffle(buildDeck(selectedLength));
     runner = { exposure: 0, maxExposure: 20 };
     tool = null;
@@ -1204,13 +1261,22 @@
       titleEl.textContent = 'SUCCESS';
       msgEl.innerHTML = 'Trace cleared.<br><strong>The Pit holds no record.</strong>';
 
-      rewardChoices = buildPlaceholderRewards();
       lootItems.innerHTML = '';
       lootBox.classList.remove('hidden');
-      renderRewardChoices();
 
-      actionBtn.textContent = 'Claim Reward';
+      actionBtn.textContent = 'CLAIM REWARD';
       actionBtn.disabled = true;
+
+      if (P63_EMBED){
+        // Show loading placeholders, then request real rewards from parent
+        rewardChoices = [];
+        rewardSetId = null;
+        renderRewardChoices();
+        P63.send("P63_REQUEST_REWARD_SET", { kind:"INFILTRATION" });
+      } else {
+        rewardChoices = buildPlaceholderRewards();
+        renderRewardChoices();
+      }
     } else {
       titleEl.textContent = 'TRACE BREACHED';
       msgEl.innerHTML =
@@ -1220,7 +1286,7 @@
       lootBox.classList.add('hidden');
       lootItems.innerHTML = '';
 
-      actionBtn.textContent = 'New Run';
+      actionBtn.textContent = P63_EMBED ? 'END GAME' : 'New Run';
       actionBtn.disabled = false;
     }
 
